# slc

coins/: Cargo.toml  gulden_requests.json
coins/src/: lib.rs  main.rs
coins/src/database/: client.rs
coins/src/graph/: mod.rs
coins/src/gulden/: mod.rs
coins/src/price_updater/: mod.rs
coins/src/reader/: mod.rs
coins/src/request/: mod.rs
coins/templates/: index.html.hbs
portfolio/: Cargo.toml
portfolio/release/templates/: index.html.hbs  leerdoel1.html.hbs  leerdoel2.html.hbs  leerdoel3.html.hbs  leerdoel4.html.hbs  projects1.html.hbs  projects3.html.hbs  projects4.html.hbs
portfolio/src/: main.rs
portfolio/templates/: contact.html.hbs  cv.html.hbs  leerdoel4.html.hbs  projects2.html.hbs
portfolio/templates/content/css/: site.css
portfolio/templates/layout/: standard.html.hbs
random/: Cargo.toml  test.txt
random/src/: main.rs
