[package]
name = "portfolio"
version = "0.1.0"
authors = ["Oscar Veldman <oveldman@gmail.com>"]

[dependencies]
serde = "1.0.68"
serde_json = "1.0.22"
serde_derive = "1.0.68"
rocket = "0.3.14"
rocket_codegen = "0.3.14"

[dependencies.rocket_contrib]
version = "0.3.14"
default-features = false
features = ["handlebars_templates", "json"]